--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Police -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
 
@@ -47,13 +48,26 @@
             <section id="sectionHome"
                 class="flex flex-col items-center justify-center h-[calc(100vh-100px)] px-6 space-y-6">
 
-                <!-- Bouton rond XL -->
+                <!-- Bouton rond XL centré avec animation -->
                 <div class="flex justify-center">
-                    <button id="toggleTracking" class="w-36 h-36 rounded-full flex items-center justify-center text-white text-base font-semibold transition-all
-             bg-gray-300 hover:brightness-105 active:scale-95 shadow-lg duration-300">
-                        Activer
+                    <button id="toggleTracking" class="w-36 h-36 rounded-full flex items-center justify-center relative
+    text-white text-xl font-semibold transition-all duration-300
+    bg-gray-300 hover:brightness-105 active:scale-95 shadow-lg">
+
+                        <!-- Texte -->
+                        <span id="toggleText" class="z-10">Activer</span>
+
+                        <!-- Spinner centré -->
+                        <svg id="toggleSpinner" class="animate-spin h-8 w-8 text-white absolute z-10 hidden"
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4">
+                            </circle>
+                            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v8H4z"></path>
+                        </svg>
                     </button>
                 </div>
+
+
 
                 <!-- Loader -->
                 <div id="loader" class="flex justify-center hidden">
@@ -66,7 +80,7 @@
                 </div>
 
                 <!-- Statut -->
-                <p id="trackingStatus" class="text-center text-sm text-dark-gray">
+                <p id="trackingStatus" class="text-center text-xl text-sm text-dark-gray">
                     Tracking désactivé
                 </p>
 
@@ -180,147 +194,43 @@
         </main>
 
         <!-- Footer -->
-        <footer class="fixed bottom-0 left-0 right-0 max-w-md mx-auto flex justify-around items-center
-                   p-2 border-t border-medium-gray bg-white">
+        <footer class="fixed bottom-4 left-1/2 -translate-x-1/2 w-[92%] max-w-md mx-auto 
+                bg-white rounded-2xl shadow-md flex justify-around items-center px-4 py-2
+                border border-gray-200">
+
             <!-- Accueil -->
-            <a id="navHome"
-                class="flex flex-col items-center gap-1 text-primary-blue bg-blue-50 font-bold shadow-inner py-1 w-1/3 cursor-pointer">
-                <svg class="w-6 h-6 transition-transform" fill="none" stroke="currentColor" stroke-width="2"
-                    viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4m-6 0h6" />
-                </svg>
-                <span class="text-xs">Accueil</span>
-            </a>
+            <button id="navHome" class="group flex flex-col items-center w-1/3 text-primary-blue">
+                <div class="bg-blue-50 rounded-full p-3 shadow-inner transition-all group-hover:scale-105">
+                    <i class="fas fa-house text-lg"></i>
+                </div>
+                <span class="text-xs mt-1 font-medium">Accueil</span>
+            </button>
 
-            <!-- Carte (par défaut actif) -->
-            <a id="navMap"
-                class="flex flex-col items-center gap-1 text-gray-500 py-1 w-1/3 hover:text-primary-blue cursor-pointer">
-                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M12 1.586l-4 4v12.828l4-4V1.586zM3.707 3.293A1 1 0 002 4v12a1 1 0 00.293.707L6 20.414V5.586L3.707 3.293zM17.707 5.293L14 1.586v14.828l3.707-3.707A1 1 0 0018 12V6a1 1 0 00-.293-.707z" />
-                </svg>
-                <span class="text-xs font-bold">Carte</span>
-            </a>
+            <!-- Carte -->
+            <button id="navMap"
+                class="group flex flex-col items-center w-1/3 text-gray-500 hover:text-primary-blue transition-all">
+                <div class="rounded-full p-3 transition-all group-hover:bg-blue-50 group-hover:scale-105">
+                    <i class="fas fa-map-location-dot text-lg"></i>
+                </div>
+                <span class="text-xs mt-1 font-medium">Carte</span>
+            </button>
 
-            <!-- Profil -->
-            <a id="navPackaging"
-                class="flex flex-col items-center gap-1 text-gray-500 py-1 w-1/3 hover:text-primary-blue cursor-pointer">
-                <!-- Icône “package” -->
-                <svg class="w-6 h-6 transition-transform" fill="none" stroke="currentColor" stroke-width="2"
-                    viewBox="0 0 24 24">
-                    <!-- boite fermée -->
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M3 7l9 5 9-5M5 19V8l7 4 7-4v11a2 2 0 01-2 2H7a2 2 0 01-2-2z" />
-                </svg>
-                <span class="text-xs">Packages</span>
-            </a>
+            <!-- Packages -->
+            <button id="navPackaging"
+                class="group flex flex-col items-center w-1/3 text-gray-500 hover:text-primary-blue transition-all">
+                <div class="rounded-full p-3 transition-all group-hover:bg-blue-50 group-hover:scale-105">
+                    <i class="fas fa-box-open text-lg"></i>
+                </div>
+                <span class="text-xs mt-1 font-medium">Packages</span>
+            </button>
 
         </footer>
+
     </div>
 
     <!-- Interactivité -->
-    <script>
-        // Éléments DOM
-        const navHome = document.getElementById('navHome');
-        const navMap = document.getElementById('navMap');
-        const navPackaging = document.getElementById('navPackaging');
+    <script src="./main.js">
 
-        const header = document.getElementById('headerTitle');
-        const sectionHome = document.getElementById('sectionHome');
-        const sectionMap = document.getElementById('sectionMap');
-        const sectionPackaging = document.getElementById('sectionPackaging');
-
-        const toggleBtn = document.getElementById('toggleTracking');
-        const loader = document.getElementById('loader');
-        const statusTxt = document.getElementById('trackingStatus');
-        const locationTxt = document.getElementById('userLocation');
-
-        let trackingOn = false;
-
-        // Activer / désactiver tracking avec animation de 3 secondes
-        toggleBtn.addEventListener('click', () => {
-            loader.classList.remove('hidden');
-            toggleBtn.disabled = true;
-
-            setTimeout(() => {
-                loader.classList.add('hidden');
-                toggleBtn.disabled = false;
-                trackingOn = !trackingOn;
-
-                if (trackingOn) {
-                    toggleBtn.textContent = 'Désactiver';
-                    toggleBtn.classList.remove('bg-gray-300');
-                    toggleBtn.classList.add('bg-[var(--safe-green)]');
-                    statusTxt.textContent = 'Tracking activé — surveillance en cours';
-                } else {
-                    toggleBtn.textContent = 'Activer';
-                    toggleBtn.classList.add('bg-gray-300');
-                    toggleBtn.classList.remove('bg-[var(--safe-green)]');
-                    statusTxt.textContent = 'Tracking désactivé';
-                }
-
-            }, 3000);
-        });
-
-        // Mise à jour de la localisation en lien vers Google Maps
-        function updateLocation(position) {
-            const lat = position.coords.latitude;
-            const lon = position.coords.longitude;
-            const mapUrl = `https://www.google.com/maps?q=${lat},${lon}`;
-            locationTxt.innerHTML = `<a href="${mapUrl}" target="_blank" rel="noopener noreferrer" class="text-blue-600 underline hover:text-blue-800">
-      Voir sur Google Maps
-    </a>`;
-        }
-
-        function locationError() {
-            locationTxt.textContent = "Accès à la localisation refusé.";
-        }
-
-        // Demander la géolocalisation
-        if ("geolocation" in navigator) {
-            navigator.geolocation.getCurrentPosition(updateLocation, locationError);
-            navigator.geolocation.watchPosition(updateLocation, locationError, {
-                enableHighAccuracy: true,
-                maximumAge: 10000
-            });
-        } else {
-            locationTxt.textContent = "La géolocalisation n’est pas supportée.";
-        }
-
-        // Navigation entre onglets
-        function setActive(tab) {
-            [navHome, navMap, navPackaging].forEach(el => {
-                el.classList.remove('text-primary-blue', 'bg-blue-50', 'font-bold', 'shadow-inner');
-                el.classList.add('text-gray-500');
-            });
-
-            sectionHome.classList.add('hidden');
-            sectionMap.classList.add('hidden');
-            sectionPackaging.classList.add('hidden');
-
-            if (tab === 'home') {
-                navHome.classList.add('text-primary-blue', 'bg-blue-50', 'font-bold', 'shadow-inner');
-                header.textContent = 'Accueil';
-                sectionHome.classList.remove('hidden');
-            } else if (tab === 'packaging') {
-                navPackaging.classList.add('text-primary-blue', 'bg-blue-50', 'font-bold', 'shadow-inner');
-                header.textContent = 'Packages';
-                sectionPackaging.classList.remove('hidden');
-            } else {
-                navMap.classList.add('text-primary-blue', 'bg-blue-50', 'font-bold', 'shadow-inner');
-                header.textContent = 'Carte';
-                sectionMap.classList.remove('hidden');
-            }
-        }
-
-        // Écouteurs sur le footer
-        navHome.addEventListener('click', () => setActive('home'));
-        navMap.addEventListener('click', () => setActive('map'));
-        navPackaging.addEventListener('click', () => setActive('packaging'));
-
-        // Afficher Accueil par défaut
-        setActive('home');
     </script>
 
 
