--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
 
@@ -29,26 +30,8 @@
       --white:#ffffff;
     }
     body{font-family:"Plus Jakarta Sans",sans-serif;}
-            @keyframes pulse-slow {
+  </style>
 
-                0%,
-                100% {
-                    transform: scale(1);
-                    opacity: .7;
-                }
-
-                50% {
-                    transform: scale(1.1);
-                    opacity: 1;
-                }
-            }
-
-            .animate-pulse-slow {
-                animation: pulse-slow 2s infinite;
-            }
-        </style>
-
-    </style>
 </head>
 
 <body class="bg-light-gray">
@@ -174,38 +157,80 @@
             </section>
             <!-- SECTION : PACKAGING -->
             <section id="sectionPackaging" class="p-6 space-y-4 hidden">
-                <h2 class="text-xl font-semibold text-text-color mb-2">Packs disponibles</h2>
+                <h2 class="text-xl font-bold text-text-color mb-4">📦 Packs disponibles</h2>
 
-                <ul class="space-y-3">
-                    <li class="bg-white rounded-lg p-4 shadow-sm flex items-center justify-between">
-                        <span class="font-medium text-gray-800">Antananarivo</span>
+                <ul class="space-y-4">
+                    <!-- Province -->
+                    <li
+                        class="bg-white rounded-2xl px-5 py-4 shadow-sm border border-gray-200 flex items-center justify-between hover:shadow-md transition">
+                        <div>
+                            <h3 class="text-lg font-semibold text-gray-800">Antananarivo</h3>
+                            <p class="text-sm text-gray-500">6000 Ar / 3 mois</p>
+                        </div>
                         <button
-                            class="text-sm text-white bg-primary-blue px-4 py-1.5 rounded-md hover:brightness-110">Télécharger</button>
+                            class="flex items-center gap-2 bg-primary-blue text-white px-4 py-2 text-sm font-medium rounded-lg hover:brightness-110 transition">
+                            <i class="fas fa-download"></i> Télécharger
+                        </button>
                     </li>
-                    <li class="bg-white rounded-lg p-4 shadow-sm flex items-center justify-between">
-                        <span class="font-medium text-gray-800">Fianarantsoa</span>
+
+                    <li
+                        class="bg-white rounded-2xl px-5 py-4 shadow-sm border border-gray-200 flex items-center justify-between hover:shadow-md transition">
+                        <div>
+                            <h3 class="text-lg font-semibold text-gray-800">Fianarantsoa</h3>
+                            <p class="text-sm text-gray-500">6000 Ar / 3 mois</p>
+                        </div>
                         <button
-                            class="text-sm text-white bg-primary-blue px-4 py-1.5 rounded-md hover:brightness-110">Télécharger</button>
+                            class="flex items-center gap-2 bg-primary-blue text-white px-4 py-2 text-sm font-medium rounded-lg hover:brightness-110 transition">
+                            <i class="fas fa-download"></i> Télécharger
+                        </button>
                     </li>
-                    <li class="bg-white rounded-lg p-4 shadow-sm flex items-center justify-between">
-                        <span class="font-medium text-gray-800">Toamasina</span>
+
+                    <li
+                        class="bg-white rounded-2xl px-5 py-4 shadow-sm border border-gray-200 flex items-center justify-between hover:shadow-md transition">
+                        <div>
+                            <h3 class="text-lg font-semibold text-gray-800">Toamasina</h3>
+                            <p class="text-sm text-gray-500">6000 Ar / 3 mois</p>
+                        </div>
                         <button
-                            class="text-sm text-white bg-primary-blue px-4 py-1.5 rounded-md hover:brightness-110">Télécharger</button>
+                            class="flex items-center gap-2 bg-primary-blue text-white px-4 py-2 text-sm font-medium rounded-lg hover:brightness-110 transition">
+                            <i class="fas fa-download"></i> Télécharger
+                        </button>
                     </li>
-                    <li class="bg-white rounded-lg p-4 shadow-sm flex items-center justify-between">
-                        <span class="font-medium text-gray-800">Mahajanga</span>
+
+                    <li
+                        class="bg-white rounded-2xl px-5 py-4 shadow-sm border border-gray-200 flex items-center justify-between hover:shadow-md transition">
+                        <div>
+                            <h3 class="text-lg font-semibold text-gray-800">Mahajanga</h3>
+                            <p class="text-sm text-gray-500">6000 Ar / 3 mois</p>
+                        </div>
                         <button
-                            class="text-sm text-white bg-primary-blue px-4 py-1.5 rounded-md hover:brightness-110">Télécharger</button>
+                            class="flex items-center gap-2 bg-primary-blue text-white px-4 py-2 text-sm font-medium rounded-lg hover:brightness-110 transition">
+                            <i class="fas fa-download"></i> Télécharger
+                        </button>
                     </li>
-                    <li class="bg-white rounded-lg p-4 shadow-sm flex items-center justify-between">
-                        <span class="font-medium text-gray-800">Toliara</span>
+
+                    <li
+                        class="bg-white rounded-2xl px-5 py-4 shadow-sm border border-gray-200 flex items-center justify-between hover:shadow-md transition">
+                        <div>
+                            <h3 class="text-lg font-semibold text-gray-800">Toliara</h3>
+                            <p class="text-sm text-gray-500">6000 Ar / 3 mois</p>
+                        </div>
                         <button
-                            class="text-sm text-white bg-primary-blue px-4 py-1.5 rounded-md hover:brightness-110">Télécharger</button>
+                            class="flex items-center gap-2 bg-primary-blue text-white px-4 py-2 text-sm font-medium rounded-lg hover:brightness-110 transition">
+                            <i class="fas fa-download"></i> Télécharger
+                        </button>
                     </li>
-                    <li class="bg-white rounded-lg p-4 shadow-sm flex items-center justify-between">
-                        <span class="font-medium text-gray-800">Antsiranana</span>
+
+                    <li
+                        class="bg-white rounded-2xl px-5 py-4 shadow-sm border border-gray-200 flex items-center justify-between hover:shadow-md transition">
+                        <div>
+                            <h3 class="text-lg font-semibold text-gray-800">Antsiranana</h3>
+                            <p class="text-sm text-gray-500">6000 Ar / 3 mois</p>
+                        </div>
                         <button
-                            class="text-sm text-white bg-primary-blue px-4 py-1.5 rounded-md hover:brightness-110">Télécharger</button>
+                            class="flex items-center gap-2 bg-primary-blue text-white px-4 py-2 text-sm font-medium rounded-lg hover:brightness-110 transition">
+                            <i class="fas fa-download"></i> Télécharger
+                        </button>
                     </li>
                 </ul>
             </section>
@@ -213,33 +238,37 @@
         </main>
 
         <!-- Footer -->
-        <footer class="fixed bottom-4 left-1/2 transform -translate-x-1/2 
-               w-[90%] max-w-md bg-white rounded-full shadow-lg
-               p-2 flex justify-between items-center relative">
+        <footer class="fixed bottom-4 left-1/2 -translate-x-1/2 w-[92%] max-w-md mx-auto 
+                bg-white rounded-2xl shadow-md flex justify-around items-center px-4 py-2
+                border border-gray-200">
 
-            <!-- Curseur animé -->
-            <div id="navIndicator" class="absolute top-1/2 -translate-y-1/2 w-14 h-14 bg-[var(--primary-blue)] 
-              rounded-full transition-all duration-300 ease-out
-              animate-pulse-slow"></div>
-
-            <!-- Boutons -->
-            <button data-tab="home" id="navHome" class="relative flex-1 flex items-center justify-center z-10 text-gray-500 
-                 hover:text-white transition-colors">
-                <i class="fas fa-house text-xl"></i>
+            <!-- Accueil -->
+            <button id="navHome" class="group flex flex-col items-center w-1/3 text-primary-blue">
+                <div class="bg-blue-50 rounded-full p-3 shadow-inner transition-all group-hover:scale-105">
+                    <i class="fas fa-house text-lg"></i>
+                </div>
+                <span class="text-xs mt-1 font-medium">Accueil</span>
             </button>
 
-            <button data-tab="map" id="navMap" class="relative flex-1 flex items-center justify-center z-10 text-gray-500 
-                 hover:text-white transition-colors">
-                <i class="fas fa-map-marked-alt text-xl"></i>
+            <!-- Carte -->
+            <button id="navMap"
+                class="group flex flex-col items-center w-1/3 text-gray-500 hover:text-primary-blue transition-all">
+                <div class="rounded-full p-3 transition-all group-hover:bg-blue-50 group-hover:scale-105">
+                    <i class="fas fa-map-location-dot text-lg"></i>
+                </div>
+                <span class="text-xs mt-1 font-medium">Carte</span>
             </button>
 
-            <button data-tab="packages" id="navPackaging" class="relative flex-1 flex items-center justify-center z-10 text-gray-500 
-                 hover:text-white transition-colors">
-                <i class="fas fa-box-open text-xl"></i>
+            <!-- Packages -->
+            <button id="navPackaging"
+                class="group flex flex-col items-center w-1/3 text-gray-500 hover:text-primary-blue transition-all">
+                <div class="rounded-full p-3 transition-all group-hover:bg-blue-50 group-hover:scale-105">
+                    <i class="fas fa-box-open text-lg"></i>
+                </div>
+                <span class="text-xs mt-1 font-medium">Packages</span>
             </button>
+
         </footer>
-
-        <!-- Animation “slow pulse” custom -->
 
     </div>
 
