--- a/index.html
+++ b/index.html
@@ -238,38 +238,38 @@
         </main>
 
         <!-- Footer -->
-        <footer class="fixed bottom-4 left-1/2 -translate-x-1/2 w-[92%] max-w-md mx-auto 
-                bg-white rounded-2xl shadow-md flex justify-around items-center px-4 py-2
-                border border-gray-200">
+        <footer class="fixed bottom-4 left-1/2 -translate-x-1/2 w-[92%] max-w-md mx-auto
+                bg-white rounded-full shadow-xl flex justify-around items-center px-4 py-2
+                border border-gray-100">
 
-            <!-- Accueil -->
-            <button id="navHome" class="group flex flex-col items-center w-1/3 text-primary-blue">
-                <div class="bg-blue-50 rounded-full p-3 shadow-inner transition-all group-hover:scale-105">
-                    <i class="fas fa-house text-lg"></i>
-                </div>
-                <span class="text-xs mt-1 font-medium">Accueil</span>
+            <button id="navHome" class="group flex items-center justify-center flex-1 py-2 px-3
+                rounded-full transition-all duration-300
+                text-gray-500 group-[.active]:bg-primary-blue group-[.active]:text-white
+                hover:bg-blue-50 hover:text-primary-blue">
+                <i class="fas fa-house text-lg transition-all duration-300 group-[.active]:text-white"></i>
+                <span
+                    class="text-sm ml-2 font-medium hidden md:inline transition-all duration-300 group-[.active]:text-white">Accueil</span>
             </button>
 
-            <!-- Carte -->
-            <button id="navMap"
-                class="group flex flex-col items-center w-1/3 text-gray-500 hover:text-primary-blue transition-all">
-                <div class="rounded-full p-3 transition-all group-hover:bg-blue-50 group-hover:scale-105">
-                    <i class="fas fa-map-location-dot text-lg"></i>
-                </div>
-                <span class="text-xs mt-1 font-medium">Carte</span>
+            <button id="navMap" class="group flex items-center justify-center flex-1 py-2 px-3
+                rounded-full transition-all duration-300
+                text-gray-500 group-[.active]:bg-primary-blue group-[.active]:text-white
+                hover:bg-blue-50 hover:text-primary-blue">
+                <i class="fas fa-map-location-dot text-lg transition-all duration-300 group-[.active]:text-white"></i>
+                <span
+                    class="text-sm ml-2 font-medium hidden md:inline transition-all duration-300 group-[.active]:text-white">Carte</span>
             </button>
 
-            <!-- Packages -->
-            <button id="navPackaging"
-                class="group flex flex-col items-center w-1/3 text-gray-500 hover:text-primary-blue transition-all">
-                <div class="rounded-full p-3 transition-all group-hover:bg-blue-50 group-hover:scale-105">
-                    <i class="fas fa-box-open text-lg"></i>
-                </div>
-                <span class="text-xs mt-1 font-medium">Packages</span>
+            <button id="navPackaging" class="group flex items-center justify-center flex-1 py-2 px-3
+                rounded-full transition-all duration-300
+                text-gray-500 group-[.active]:bg-primary-blue group-[.active]:text-white
+                hover:bg-blue-50 hover:text-primary-blue">
+                <i class="fas fa-box-open text-lg transition-all duration-300 group-[.active]:text-white"></i>
+                <span
+                    class="text-sm ml-2 font-medium hidden md:inline transition-all duration-300 group-[.active]:text-white">Packages</span>
             </button>
 
         </footer>
-
     </div>
 
     <!-- Interactivité -->
