--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <div class="flex justify-center">
                     <button id="toggleTracking" class="w-36 h-36 rounded-full flex items-center justify-center relative
     text-white text-xl font-semibold transition-all duration-300
-    bg-gray-300 hover:brightness-105 active:scale-95 shadow-lg">
+    bg-black hover:brightness-105 active:scale-95 shadow-lg">
+
 
                         <!-- Texte -->
                         <span id="toggleText" class="z-10">Activer</span>
