--- a/index.html
+++ b/index.html
@@ -95,10 +95,6 @@
                     </p>
                 </div>
             </section>
-
-
-
-            <!-- SECTION : CARTE / DESTINATIONS (contenu existant) -->
             <!-- SECTION : CARTE (caché) -->
             <section id="sectionMap" class="hidden">
 
@@ -247,27 +243,23 @@
                 rounded-full transition-all duration-300
                 text-gray-500 group-[.active]:bg-primary-blue group-[.active]:text-white
                 hover:bg-blue-50 hover:text-primary-blue">
-                <i class="fas fa-house text-lg transition-all duration-300 group-[.active]:text-white"></i>
-                <span
-                    class="text-sm ml-2 font-medium hidden md:inline transition-all duration-300 group-[.active]:text-white">Accueil</span>
+                <i class="fas fa-house text-lg text-black  transition-all duration-300 group-[.active]:text-white"></i>
+
             </button>
 
             <button id="navMap" class="group flex items-center justify-center flex-1 py-2 px-3
                 rounded-full transition-all duration-300
                 text-gray-500 group-[.active]:bg-primary-blue group-[.active]:text-white
                 hover:bg-blue-50 hover:text-primary-blue">
-                <i class="fas fa-map-location-dot text-lg transition-all duration-300 group-[.active]:text-white"></i>
-                <span
-                    class="text-sm ml-2 font-medium hidden md:inline transition-all duration-300 group-[.active]:text-white">Carte</span>
+                <i class="fas fa-map-location-dot text-black  text-lg transition-all duration-300 group-[.active]:text-white"></i>
+
             </button>
 
             <button id="navPackaging" class="group flex items-center justify-center flex-1 py-2 px-3
                 rounded-full transition-all duration-300
                 text-gray-500 group-[.active]:bg-primary-blue group-[.active]:text-white
                 hover:bg-blue-50 hover:text-primary-blue">
-                <i class="fas fa-box-open text-lg transition-all duration-300 group-[.active]:text-white"></i>
-                <span
-                    class="text-sm ml-2 font-medium hidden md:inline transition-all duration-300 group-[.active]:text-white">Packages</span>
+                <i class="fas fa-box-open text-lg text-black  transition-all duration-300 group-[.active]:text-white"></i>
             </button>
 
         </footer>
