--- a/index.html
+++ b/index.html
@@ -256,13 +256,9 @@
     </div>
 
     <!-- Interactivité -->
-    <script src="./main.js">
-    </script>
-    <script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
+<script src="./main.js" type="module"></script>
+  <script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
   
-
-
-
 </body>
 
 </html>
